# auv_ws_new

src/auv_slam/: CMakeLists.txt
src/auv_slam/config/: flare_params.yaml  gate_params.yaml  ign_bridge.yaml  mission_params.yaml  navigation_params.yaml  qualification_params.yaml  thruster_params.yaml
src/auv_slam/launch/: demo.launch.py  display.launch.py  display_copy.launch.py  hybrid_slam.launch.py  integrated_mission.launch.py  mission.launch.py  qualification.launch.py  qualification_mission.launch.py
src/auv_slam/models/orca4_ign/: model.sdf
src/auv_slam/scripts/: BT.py  demo.py  diagnostic_node.py  gate_detector_node.py  gate_navigator_node.py  qualification_detector.py  qualification_detector_node.py  qualification_gate_detector.py  qualification_gate_detector_node.py  qualification_navigator.py  qualification_navigator_node.py  simple_test_publisher.py  simple_thruster_mapper.py  thruster_configuration.py  thruster_configuration_checker.py
src/auv_slam/src/description/: orca4_description.urdf
src/auv_slam/worlds/: qualification_world.sdf  underwater_world_ign.sdf
